# harrington-labs

./: .gitignore  .stignore  CURRENT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/pages/: 10_Demonstrator_Builder.py  10_Source_Builder.py  11_Modeling_And_Simulation.py  1_Direct_Diode_Lab.py  2_Fiber_Laser_Lab.py  30_Interaction_Analyzer_Legacy.py  3_Beam_Control_Lab.py  3_Pulsed_Laser_Lab.py  4_Pulsed_Laser_Lab.py  4_Quantum_Dots_Lab.py  50_Simulation_Legacy.py  5_Beam_Control_Lab.py  5_Quantum_Dots_Lab.py  60_Digital_Twin_Legacy.py  6_Coatings_Lab.py  70_Gnuplot_Legacy.py  7_Admin.py  7_Advanced_Spectroscopy_Lab.py  7_Laser_Library.py  7a_Spectroscopy_Lab.py  80_Run_Campaign_Legacy.py  8_Material_Database.py  90_Admin.py  9_Modeling_And_Simulation.py
data/custom_models/: _example_fresnel.py
src/harrington_labs/: __init__.py
src/harrington_labs/comparison/: __init__.py  metrics.py  parsers.py  templates.py  ui.py
src/harrington_labs/domain/: __init__.py  spectroscopy.py
src/harrington_labs/lmi/: __init__.py
src/harrington_labs/lmi/domain/: __init__.py  (+5 more)
src/harrington_labs/simulation/: __init__.py  beam_combining.py  beam_control.py  coatings.py  direct_diode.py  fiber_laser.py  pulsed_laser.py  qd_diode_combiner.py  qd_fiber_laser.py  quantum_dots.py  spectroscopy.py
src/harrington_labs/ui/: __init__.py  db_sidebar.py  shared_state.py
tests/security/: test_repo_hardening.py
tests/stress/: test_spectroscopy_stress.py
tools/: generate_campaign.py  reformat_knife_edge.py  run_campaign.py  run_digital_twin.py  watch_inbox.py
(+13 files in other folders)
